--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Yuntai Ding's Homepage"
 title_separator          : "-"
 name                     : &name "Yifan Wang"
 description              : &description "personal description"
-url                      : https://jamesyifan.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://BBDing-DYT.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "BBDing-DYT/BBDing-DYT.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
