--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,8 @@ analytics:
 
 # Site Author
 author:
-  name             : "Yifan Wang"
-  avatar           : "yifanwang.jpeg"
+  name             : "Yuntai Ding"
+  avatar           : "yuntaiding.jpeg"
   bio              : "Assistant Professor at School of Information Technology & Management, University of International Business and Economics"
   location         : "Beijing, China"
   employer         :
