--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yuntai Ding"
-  avatar           : "yuntaiding.jpeg"
+  avatar           : "Ding.jpg"
   bio              : "Assistant Professor at School of Information Technology & Management, University of International Business and Economics"
   location         : "Beijing, China"
   employer         :
